--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "tsnd index.ts"
+		"dev": "ts-node index.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@types/blessed": "^0.1.19",
-		"ts-node-dev": "^1.1.8",
+		"ts-node": "^10.4.0",
 		"typescript": "^4.5.2"
 	}
 }
